2000-08-28  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/asm.S (console_putchar): Don't print a carriage return
	when C is a newline.
	* stage2/char_io.c (grub_putchar): Call grub_putchar with the
	arugment set to a carriage return, if C is a newline.
	[!STAGE1_5 && SUPPORT_SERIAL]: Don't print a carriage return
	when C is a newline.
	
2000-08-27  OKUJI Yoshinori  <okuji@gnu.org>

	* lib/device.c [__linux__]: Don't include linux/fs.h.
	[!BLKGETSIZE] (BLKGETSIZE): Defined as _IO(0x12,96).
	* grub/asmstub.c [__linux__]: Don't include linux/fs.h.
	
2000-08-27  OKUJI Yoshinori  <okuji@gnu.org>

	Preserve a magic number used by Windows NT in a MBR. Shit!
	Reported by Khimenko Victor.
	
	* stage1/stage1.h (STAGE1_WINDOWS_NT_MAGIC): New macro.
	* stage1/stage1.S (copy_buffer): Use pusha and popa, instead of
	pushing/poping %cx and %si separately, to reduce the code size.
	(nt_magic): New label. Set the offset to _start plus
	STAGE1_WINDOWS_NT_MAGIC
	(part_start): New label.
	* stage2/builtins.c (install_func): If DEST_DRIVE is a hard
	disk, copy the possible partition table and Windows NT magic to
	STAGE1_BUFFER from OLD_SECT.
	
2000-08-26  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/char_io.c (translate_keycode) [SUPPORT_SERIAL]: Don't
	drain the input buffer, since that was irritating.
	
2000-08-26  OKUJI Yoshinori  <okuji@gnu.org>

	Don't save/restore fragile registers unnecessarily.
	
	* stage2/asm.S [!STAGE1_5] (track_int13): Don't save/restore
	%ecx, %edx, or %eax.
	[!STAGE1_5] (set_int13_handler): Likewise.
	(biosdisk_int13_extensions): Likewise.
	(biosdisk_standard): Likewise.
	(check_int13_extensions): Likewise.
	(get_diskinfo_int13_extensions): Likewise.
	(get_diskinfo_standard): Likewise.
	(get_diskinfo_floppy): Likewise.
	[!STAGE1_5] (get_eisamemsize): Likewise.
	[!STAGE1_5] (get_mmap_entry): Likewise.
	[!STAGE1_5] (console_cls): Likewise.
	[!STAGE1_5] (nocursor): Likewise.
	[!STAGE1_5] (console_getxy): Likewise.
	[!STAGE1_5] (console_gotoxy): Likewise.